==> luohaojie-tt/FreeRTOS-LEARN/Drivers/GPIO/gd32f10x_gpio.c <==
#include "gd32f10x_gpio.h"
#include "gd32f10x_rcc.h"
#define GPIO_MODE_INPUT             ((uint32_t)0x00000000)
#define GPIO_MODE_OUTPUT_10MHZ      ((uint32_t)0x00000001)
#define GPIO_MODE_OUTPUT_2MHZ       ((uint32_t)0x00000002)
#define GPIO_MODE_OUTPUT_50MHZ      ((uint32_t)0x00000003)
#define GPIO_MODE_MASK              ((uint32_t)0x00000003)
#define GPIO_CNF_INPUT_ANALOG       ((uint32_t)0x00000000)
#define GPIO_CNF_INPUT_FLOATING     ((uint32_t)0x00000004)
#define GPIO_CNF_INPUT_PU_PD        ((uint32_t)0x00000008)
#define GPIO_CNF_MASK               ((uint32_t)0x0000000C)
#define GPIO_CNF_OUTPUT_PP          ((uint32_t)0x00000000)
#define GPIO_CNF_OUTPUT_OD          ((uint32_t)0x00000004)
#define GPIO_CNF_AF_PP              ((uint32_t)0x00000008)
#define GPIO_CNF_AF_OD              ((uint32_t)0x0000000C)
#define GPIO_PORT_SOURCE_MASK       ((uint32_t)0x0000000F)
#define GPIO_PIN_SOURCE_MASK        ((uint32_t)0x0000000F)

void GPIO_DeInit(GPIO_TypeDef* GPIOx)
{
  /* Check the parameters */
  assert_param(IS_GPIO_ALL_PERIPH(GPIOx));
  
  if (GPIOx == GPIOA)
  {
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOA, ENABLE);
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOA, DISABLE);
  }
  else if (GPIOx == GPIOB)
  {
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOB, ENABLE);
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOB, DISABLE);
  }
  else if (GPIOx == GPIOC)
  {
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOC, ENABLE);
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOC, DISABLE);
  }
  else if (GPIOx == GPIOD)
  {
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOD, ENABLE);
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOD, DISABLE);
  }
  else if (GPIOx == GPIOE)
  {
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOE, ENABLE);
    RCC_APB2PeriphResetCmd(RCC_APB2Periph_GPIOE, DISABLE);
  }
}

void GPIO_Init(GPIO_TypeDef* GPIOx, GPIO_InitTypeDef* GPIO_InitStruct)
{
  uint32_t currentmode = 0x00, currentpin = 0x00, pinpos = 0x00, pos = 0x00;
  uint32_t tmpreg = 0x00, pinmask = 0x00;
  
  /* Check the parameters */
  assert_param(IS_GPIO_ALL_PERIPH(GPIOx));
  assert_param(IS_GPIO_PIN(GPIO_InitStruct->GPIO_Pin));
  assert_param(IS_GPIO_MODE(GPIO_InitStruct->GPIO_Mode));
  assert_param(IS_GPIO_SPEED(GPIO_InitStruct->GPIO_Speed));
  
  /*---------------------------- GPIO Mode Configuration -----------------------*/
  currentmode = ((uint32_t)GPIO_InitStruct->GPIO_Mode) & GPIO_CNF_MASK;
  
  /* Check if the current mode is input */
  if ((((uint32_t)GPIO_InitStruct->GPIO_Mode) & GPIO_MODE_MASK) == GPIO_MODE_INPUT)
  {
    /* Input mode */
    currentmode |= ((uint32_t)GPIO_InitStruct->GPIO_Mode) & GPIO_MODE_INPUT;
  }
  else
  {
    /* Output mode */
    currentmode |= (uint32_t)GPIO_InitStruct->GPIO_Speed;
  }
  
  /*---------------------------- GPIO CRL Configuration ------------------------*/
  /* Get the port pins position */
  currentpin = GPIO_InitStruct->GPIO_Pin;
  
  /* Configure the eight low port pins */
  if (((uint32_t)currentpin & ((uint32_t)0x00FF)) != 0x00)
  {
    tmpreg = GPIOx->CRL;
    
    for (pinpos = 0x00; pinpos < 0x08; pinpos++)
    {
      pos = ((uint32_t)0x01) << pinpos;
      
      /* Get the port pins position */
      currentpin = (GPIO_InitStruct->GPIO_Pin) & pos;
      
      if (currentpin == pos)
      {
        pos = pinpos << 2;
        /* Clear the corresponding low control register bits */
        pinmask = ((uint32_t)0x0F) << pos;
        tmpreg &= ~pinmask;
        
        /* Write the mode configuration in the corresponding bits */
        tmpreg |= (currentmode << pos);
        
        /* Reset the corresponding ODR bit */
        if (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPD)
        {
          GPIOx->BRR = (((uint32_t)0x01) << pinpos);
        }
        /* Set the corresponding ODR bit */
        else
        {
          if (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPU)
          {
            GPIOx->BSRR = (((uint32_t)0x01) << pinpos);
          }
        }
      }
    }
    GPIOx->CRL = tmpreg;
  }
  
  /*---------------------------- GPIO CRH Configuration ------------------------*/
  /* Configure the eight high port pins */
  if (GPIO_InitStruct->GPIO_Pin > 0x00FF)
  {
    tmpreg = GPIOx->CRH;
    for (pinpos = 0x00; pinpos < 0x08; pinpos++)
    {
      pos = (((uint32_t)0x01) << (pinpos + 0x08));
      /* Get the port pins position */
      currentpin = ((GPIO_InitStruct->GPIO_Pin) & pos);
      if (currentpin == pos)
      {
        pos = pinpos << 2;
        /* Clear the corresponding high control register bits */
        pinmask = ((uint32_t)0x0F) << pos;
        tmpreg &= ~pinmask;
        
        /* Write the mode configuration in the corresponding bits */
        tmpreg |= (currentmode << pos);
        
        /* Reset the corresponding ODR bit */
        if (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPD)
        {
          GPIOx->BRR = (((uint32_t)0x01) << (pinpos + 0x08));
        }
        /* Set the corresponding ODR bit */
        else
        {
          if (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPU)
          {
            GPIOx->BSRR = (((uint32_t)0x01) << (pinpos + 0x08));
          }
        }
      }
    }
    GPIOx->CRH = tmpreg;
  }
}

void GPIO_StructInit(GPIO_InitTypeDef* GPIO_InitStruct)
{
  /* Reset GPIO init structure parameters values */
  GPIO_InitStruct->GPIO_Pin  = GPIO_Pin_All;
  GPIO_InitStruct->GPIO_Speed = GPIO_SPEED_2MHZ;
  GPIO_InitStruct->GPIO_Mode = GPIO_Mode_IN_FLOATING;
}
